# server/common/api.yml
@@ -14,6 +14,8 @@ tags:
     description: Chef endpoints
   - name: Menu Items
     description: Menu Items endpoints
+  - name: Order
+    description: Order endpoints
 paths:
   /auth/signupUser:
     post:
@@ -213,6 +215,48 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ChefMenuItems'
+  /order/initializeOrder:
+    post:
+      tags:
+        - Order
+      security:
+        - Bearer: []
+      summary: Initialize an order
+      description: Initialize an order
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/InitializeOrder'
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InitializeOrderResponse'
+  /order/verifyOrder:
+    post:
+      tags:
+        - Order
+      security:
+        - Bearer: []
+      summary: Verify an order
+      description: Verify an order
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/VerifyOrder'
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/VerifyOrderResponse'
 
 components:
   securitySchemes:
@@ -469,3 +513,58 @@ components:
           type: array
           items:
             type: string
+    InitializeOrder:
+      type: object
+      required:
+        - chefId
+        - type
+        - address
+        - numberOfPeople
+        - numberOfDays
+        - dailySubscriptionAmount
+      properties:
+        chefId:
+          type: string
+        type:
+          type: string
+        address:
+          type: string
+        numberOfPeople:
+          type: integer
+        numberOfDays:
+          type: integer
+        dailySubscriptionAmount:
+          type: integer
+    InitializeOrderResponse:
+      type: object
+      required:
+        - subscriptionId
+        - planId
+        - orderId
+      properties:
+        subscriptionId:
+          type: string
+        planId:
+          type: string
+        orderId:
+          type: string
+    VerifyOrder:
+      type: object
+      required:
+        - razorpay_payment_id
+        - razorpay_signature
+        - orderId
+      properties:
+        razorpay_payment_id:
+          type: string
+        razorpay_signature:
+          type: string
+        orderId:
+          type: string
+    VerifyOrderResponse:
+      type: object
+      required:
+        - message
+      properties:
+        message:
+          type: string
